--- a/PL_Aplicacion_Escritorio_Veterinaria/PL_Aplicacion_Escritorio_Veterinaria.csproj
+++ b/PL_Aplicacion_Escritorio_Veterinaria/PL_Aplicacion_Escritorio_Veterinaria.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pantallas\FormPrueba.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Pantallas\FormPrueba.Designer.cs">
+      <DependentUpon>FormPrueba.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pantallas\frm_Principal.cs">
       <SubType>Form</SubType>
     </Compile>
